--- a/index.html
+++ b/index.html
@@ -319,5 +319,9 @@
 
         createCodingEffect();
     </script>
+    <audio autoplay loop hidden>
+  <source src="assets/audio/lofi.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
